# brainsets

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  demo.ipynb  mp.py  mp_run.py  prepare_data.py  processor.py  pyproject.toml  run_lfp_processing.sh  setup.py  test.ipynb  test.py  testing.ipynb
.github/scripts/: discover_changed_openneuro_pipelines.py
.github/workflows/: dandi_testing.yml  dandi_testing_matrix.yml  pipeline_testing.yml  pipeline_testing_matrix.yml  publish.yml  testing.yml
brainsets/: __init__.py  ajile_behavior_labels.py  brainset.py  cli.py  config.py  core.py  descriptions.py  moabb_pipeline.py  pipeline.py  processor.py  runner.py  split_configs.py
brainsets/_cli/: add.py  cli.py  cli_add.py  cli_completion.py  cli_config.py  cli_list.py  cli_prepare.py  config.py  list.py  prepare.py  utils.py
brainsets/datasets/: AllenVisualCodingOphys2016.py  ChurchlandShenoyNeural2012.py  CmiMIPDB2016.py  FlintSlutzkyAccurate2012.py  KellyCMIDevelopingBrain2016.py  KempSleepEDF2013.py  KlinzingSleepDS005555.py  KlinzingSleepDS0055552024.py  KochiVisualNamingDS006914.py  KochiVisualNamingDS0069142025.py  Neuroprobe2025.py  NeurosoftMinipigs2026.py  OdohertySabesNonhuman2017.py  OpenNeuroBase.py  OpenNeuroDataset.py  __init__.py  (+7 more)
brainsets_pipelines/: Snakefile
docs/: Makefile  README.md  requirements.txt
tests/: conftest.py  test_agents.py  test_agents_mock.py  test_bids_utils.py  test_cli.py  test_context.py  test_dandi_utils.py  test_data_extraction.py  test_descriptions.py  test_eeg_montages.py  test_misc_utils.py  test_mne_utils.py  test_neuroprobe2025_dataset.py  test_neuroprobe2025_pipeline.py  test_open_neuro.py  test_open_neuro_pipeline.py  test_openneuro_dataset.py  test_openneuro_pipeline.py  test_openneuro_s3.py  test_read_inline_metadata.py  test_register_splits.py  test_s3_utils.py  test_signal.py  test_split_utils.py  test_version.py  test_vollan_pipeline.py
(+277 files in other folders)
