[build-system]
requires = ["setuptools>=60.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainsets"
version = "0.1.3"
description = "A package for processing neural datasets"
readme = "README.md"
authors = [{ name = "Mehdi Azabou", email = "mehdiazabou@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "temporaldata",
    "scipy>=1.10.1",
    "pynwb>=2.2.0",
    "setuptools>=60.2.0",
    "pandas>=1.5.3",
    "jsonschema>=4.21.1",
    "scikit-image>=0.19.3",
    "tqdm>=4.64.1",
    "rich>=13.3.2",
    "msgpack>=1.0.5",
    "pydantic>=2.0",
    "click>=8.1.3",
    "uv",
    "prompt_toolkit",
    "numpy>=1.14.0",
    "pulp<2.8",
    "ray>=2.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest~=7.2.1",
    "pytest-asyncio>=0.21.0",
    "black==24.2.0",
    "pre-commit>=3.5.0",
    "flake8",
    "pytest-cov",
]
openneuro = [
    "aiofiles>=25.1.0",
    "boto3>=1.26.0",
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-core>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-cerebras>=0.6.0",
    "langchain-google-genai>=2.1.12",
    "langchain-google-vertexai>=2.1.2",
    "langchain-ollama>=0.3.10",
    "mne>=1.8.0",
    "openneuro-py>=2023.1.0",
    "sgqlc>=17.1",
]

[project.urls]
Homepage = "https://github.com/neuro-galaxy/brainsets"
Issues = "https://github.com/neuro-galaxy/brainsets/issues"
Documentation = "https://brainsets.readthedocs.io/en/latest/"

[project.scripts]
brainsets = "brainsets._cli:cli"

[tool.setuptools]
packages = [
    "brainsets",
    "brainsets.utils",
    "brainsets.taxonomy",
    "brainsets.processing",
    "brainsets._cli",
    "brainsets_pipelines",
]
include-package-data = true
